# island-rpg-

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: Actor.hpp  Algorithm.hpp  AnimatedActor.hpp  AnimatedEntity.hpp  Camera.hpp  ConfigFile.hpp  Entity.hpp  GridPathfinder.hpp  Ground.hpp  Guides.hpp  Interactable.hpp  Matrix3.hpp  Matrix4.hpp  Ocean.hpp  Pathfinder.hpp  Player.hpp  RandomGenerator.hpp  ResourceCache.hpp  ResourceManager.hpp  ShaderEntity.hpp  SimplexNoise.hpp  SpiralOut.hpp  SpriteActor.hpp  SpriteEntity.hpp  StateMachine.hpp  StateMachine2.hpp  TrackingCamera.hpp  ValueGrid.hpp  Vector.hpp  Vegetation.hpp  World.hpp  WorldCell.hpp  WorldConfig.hpp  WorldPathfinder.hpp  support.hpp
src/: Actor.cpp  Actor.h  AnimatedActor.cpp  AnimatedActor.h  AnimatedActor.hpp  AnimatedEntity.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  ConfigFile.cpp  Entity.cpp  GridPathfinder.cpp  Ground.cpp  Guides.cpp  Interactable.cpp  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Ocean.cpp  Pathfinder.cpp  Player.cpp  Player.h  README.md  ResourceManager.cpp  ResourceManager.h  ShaderEntity.cpp  SimplexNoise.cpp  SpriteActor.cpp  SpriteActor.h  SpriteActor.hpp  SpriteEntity.cpp  TrackingCamera.cpp  Vector.cpp  Vegetation.cpp  World.cpp  World.h  WorldCell.cpp  WorldConfig.cpp  WorldPathfinder.cpp  (+11 more)
test-data/: config-test.cfg
tests/: 01matrixtest.cpp  02resourcemanagertests.cpp  03statemachinetests.cpp  04pathfindertest.cpp  05diagonal.cpp  06statemachine2.cpp  07random.cpp  configfiletest.cpp  matrixtest.cpp  pathfindertest.cpp  resourcemanagertest.cpp  (+2 more)
(+124 files in other folders)
